--- a/Poke Finder/Info.plist
+++ b/Poke Finder/Info.plist
@@ -36,5 +36,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Do you want to enable</string>
 </dict>
 </plist>
